--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,25 @@
+@import url('https://fonts.googleapis.com/css?family=B612+Mono:400,400i,700,700i|Caveat:400,700|Swanky+and+Moo+Moo&display=swap&subset=cyrillic,latin-ext');
+
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+}
+
+h1{
+    font-family: 'B612 Mono', monospace;
+    text-align: center;
+    margin: 20px 0;
+}
+
+.pregunta{
+    font-family: 'Caveat', cursive;
+    font-size: 32px;
+}
+
+label{
+    width: 98%;
+    display: inline-block;
+    font-family: 'Swanky and Moo Moo', cursive;
+    font-size: 24px;
 }
